[package]
name = "besmsim"
version = "0.1.0"
authors = ["Serge Vakulenko <serge.vakulenko@gmail.com>"]
edition = "2018"

[lib]
name = "besmlib"
path = "src/lib.rs"

[[bin]]
name = "besmsim"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
